Final projeto HTML/CSS DIO :D

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="projeto_final/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hamburguer</title>
 </head>
 <body>
@@ -34,8 +34,8 @@
                 </div>
             </div>
         </div>
-        <h1>Marcio Tadeu da Costa Junior</h1>
-        <h2>Estudante de Front-end Developer</h2>
+        <h1>Menu Hamburguer</h1>
+        <h2>Vamos escolher um Hamburguer?</h2>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/marciojunior0105/">Linkedin</a>
             <a href="https://github.com/Markota26">Github</a>
@@ -85,7 +85,7 @@
         </div>
     </div>
     <footer class="footer">
-        Feito por Gabriela Pinheiro 
+        Feito por Mark0t4
     </footer>
 </body>
 </html>
